@startuml
'namespace EtAlii.Generators.Stateless.Tests
'class ChoiceStateMachineBase

[*] -> State1 : Start
State1 : this is a description
state "This is a fancy name for State2" as State2 <<choice>>
State1 -> State2 : Continue
State2 -down-> State4 : Down
State2 -up-> State3 << (string message) >>: Up
@enduml
